chore: change db name

--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ app.baseURL = 'http://localhost:8080/'
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = if541_expert_system_web
+database.default.database = if541_expert_system_sigma4_web
 database.default.username = root
 database.default.password =
 database.default.DBDriver = MySQLi
